<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_friend">

    <fragment
            android:id="@+id/navigation_friend"
            android:name="com.project.frontend.ui.friend.FriendFragment"
            android:label="@string/title_friend"
            tools:layout="@layout/fragment_friend"/>

    <fragment
            android:id="@+id/navigation_chatting"
            android:name="com.project.frontend.ui.chatting.ChattingFragment"
            android:label="@string/title_chatting"
            tools:layout="@layout/fragment_chatting"/>

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.project.frontend.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>
</navigation>